admin, usage report, minor restyling, re-built

--- a/code/parts/reports/usage-web.html
+++ b/code/parts/reports/usage-web.html
@@ -7,7 +7,7 @@
 
   <div class="row">
     <div class="col-md-12">
-      <div class="panel panel-default">
+      <div class="panel panel-default usage-report">
         <div class="panel-heading">
           <div class="row">
             <div class="col-md-12">
@@ -16,8 +16,7 @@
                 <form class="form-inline">
                   <div class="form-group">
 
-                    <!-- <div app-select ng-model="application" on-select="reloadDirs()"></div> -->
-                    <ui-select ng-model="account"
+                    <ui-select ng-model="selected.val"
                                theme="select2"
                                ng-disabled="_loading"
                                on-select="onAccountSelect($model)"
@@ -29,19 +28,12 @@
                     </ui-select>
 
                   </div>
-                </form>
-
-              </div>
-
-              <div>
-
-                <form class="form-inline">
 
                   <div class="form-group">
                     <div class="dropdown">
-                      <a class="dropdown-toggle" id="month-dd" role="button" data-toggle="dropdown" >
+                      <a class="dropdown-toggle" id="month-dd" role="button" data-toggle="dropdown" ng-disabled="_loading">
                         <div class="input-group">
-                          <input type="text" class="form-control" data-ng-model="month_year_symbol">
+                          <input type="text" class="form-control" data-ng-model="month_year_symbol" ng-disabled="_loading">
                           <span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
                         </div>
                       </a>
@@ -56,11 +48,12 @@
                   </div>
 
                   <div class="form-group">
-                    <button class="btn btn-info" ng-click="onUpdate()">
+                    <button class="btn btn-info" ng-click="onUpdate()" ng-disabled="_loading">
                       <i class="glyphicon glyphicon-refresh"></i>&nbsp;
                       Update Report
                     </button>
                   </div>
+
                 </form>
 
               </div>
@@ -69,7 +62,7 @@
           </div>
         </div>
 
-        <div class="panel-body" style="min-height: 500px;">
+        <div class="panel-body">
 
           <div class="row">
 
@@ -251,51 +244,171 @@
             </div>
           </div>
 
-          <div ng-if="report.count !== '0'">
+          <div ng-if="showTraffic()">
 
             <hr>
-            <h4>Traffic Per Billing Zone</h4>
-            <div class="row" ng-repeat="( zone, traffic ) in report.traffic_per_billing_zone">
+            <h4>Traffic Total Per Billing Zone</h4>
+            <table class="table table-stripped table-condensed">
+              <thead>
+                <tr>
+                  <th>Zone</th>
+                  <th class="text-right">Hits</th>
+                  <th class="text-right">Traffic sent</th>
+                  <th class="text-right">Traffic received</th>
+                  <th class="text-right">BW sent</th>
+                  <th class="text-right">BW received</th>
+                </tr>
+              </thead>
+              <tbody ng-repeat="( zone, traffic ) in report.traffic_per_billing_zone">
+                <tr>
+                  <td>{{zone}}</td>
+                  <td class="text-right">{{traffic.count}}</td>
+                  <td class="text-right">{{traffic.sent_bytes}}</td>
+                  <td class="text-right">{{traffic.received_bytes}}</td>
+                  <td class="text-right">{{traffic.billable_sent_bps}}</td>
+                  <td class="text-right">{{traffic.billable_received_bps}}</td>
+                </tr>
+              </tbody>
+            </table>
 
-              <div class="col-md-5">
+            <div ng-if="showDomainsUsage()">
+              <hr>
+              <h4>Domains Usage</h4>
+              <div ng-repeat="( domain, usage ) in report.domains_usage">
 
-                <form class="form-horizontal">
+                <div class="panel panel-default" style="margin-bottom: 6px;">
+                  <div class="panel-heading" role="tab" id="heading-{{$index}}">
+                    <h4 class="panel-title">
+                      <a role="button" data-toggle="collapse" data-target="#domain-{{$index}}" >{{domain}}</a>
+                    </h4>
+                  </div>
+                  <div id="domain-{{$index}}" class="panel-collapse collapse" role="tabpanel" >
+                    <div class="panel-body">
 
-                  <div class="form-group">
-                    <label class="col-sm-7 control-label" >{{zone}}, Hits</label>
-                    <div class="col-sm-5">
-                      <div class="form-control text-right">{{ traffic.count }}</div>
+                      <div class="row">
+
+                        <div class="col-md-4">
+
+                          <h4>Traffic Total</h4>
+
+                          <form class="form-horizontal">
+
+                            <div class="form-group">
+                              <label class="col-sm-6 control-label" >Hits</label>
+                              <div class="col-sm-6">
+                                <div class="form-control text-right">{{ usage.count }}</div>
+                              </div>
+                            </div>
+
+                            <div class="form-group">
+                              <label class="col-sm-6 control-label" >Sent</label>
+                              <div class="col-sm-6">
+                                <div class="form-control text-right">{{ usage.sent_bytes }}</div>
+                              </div>
+                            </div>
+
+                            <div class="form-group">
+                              <label class="col-sm-6 control-label">Received</label>
+                              <div class="col-sm-6">
+                                <div class="form-control text-right">{{ usage.received_bytes }}</div>
+                              </div>
+                            </div>
+
+                          </form>
+
+                        </div>
+
+                        <div class="col-md-4">
+
+                          <h4>Edge Cache Usage</h4>
+
+                          <form class="form-horizontal">
+
+                            <div class="form-group">
+                              <label class="col-sm-6 control-label" >HIT</label>
+                              <div class="col-sm-6">
+                                <div class="form-control text-right">{{ usage.cache_hits.HIT }}</div>
+                              </div>
+                            </div>
+
+                            <div class="form-group">
+                              <label class="col-sm-6 control-label" >MISS</label>
+                              <div class="col-sm-6">
+                                <div class="form-control text-right">{{ usage.cache_hits.MISS }}</div>
+                              </div>
+                            </div>
+
+                          </form>
+
+                        </div>
+
+                        <div class="col-md-4">
+
+                          <h4>HTTP/HTTPS Requests</h4>
+
+                          <form class="form-horizontal">
+
+                            <div class="form-group" ng-repeat="( port, hits ) in usage.port_hits">
+                              <label class="col-sm-6 control-label" >{{ port === '80' ? 'HTTP' : 'HTTPS' }}</label>
+                              <div class="col-sm-6">
+                                <div class="form-control text-right">{{ hits }}</div>
+                              </div>
+                            </div>
+
+                          </form>
+
+                        </div>
+                      </div>
+
+                        <hr>
+                        <h4>Traffic Per Billing Zone</h4>
+                        <table class="table table-stripped table-condensed">
+                          <thead>
+                            <tr>
+                              <th>Zone</th>
+                              <th class="text-right">Hits</th>
+                              <th class="text-right">Traffic sent</th>
+                              <th class="text-right">Traffic received</th>
+                            </tr>
+                          </thead>
+                          <tbody ng-repeat="( zone, traffic ) in usage.traffic_per_billing_zone">
+                            <tr>
+                              <td>{{zone}}</td>
+                              <td class="text-right">{{usage.count}}</td>
+                              <td class="text-right">{{usage.sent_bytes}}</td>
+                              <td class="text-right">{{usage.received_bytes}}</td>
+                            </tr>
+                          </tbody>
+                        </table>
+
                     </div>
                   </div>
-
-                </form>
+                </div>
               </div>
-              <div class="col-md-3">
+            </div>
 
-                <form class="form-horizontal">
+            <div ng-if="showAccounts()">
+              <hr>
+              <h4>Accounts Usage</h4>
 
-                  <div class="form-group">
-                    <label class="col-sm-5 control-label" >Traffic Sent</label>
-                    <div class="col-sm-7">
-                      <div class="form-control text-right">{{ traffic.sent_bytes }}</div>
-                    </div>
-                  </div>
-
-                </form>
-              </div>
-              <div class="col-md-4">
-
-                <form class="form-horizontal">
-
-                  <div class="form-group">
-                    <label class="col-sm-6 control-label">Traffic Received</label>
-                    <div class="col-sm-6">
-                      <div class="form-control text-right">{{ traffic.received_bytes }}</div>
-                    </div>
-                  </div>
-
-                </form>
-              </div>
+              <table class="table table-stripped table-condensed">
+                <thead>
+                  <tr>
+                    <th style="width: 40%">Account</th>
+                    <th class="text-right">Hits</th>
+                    <th class="text-right">Traffic sent</th>
+                    <th class="text-right">Traffic received</th>
+                  </tr>
+                </thead>
+                <tbody ng-repeat="account in report.accounts">
+                  <tr>
+                    <td><a ng-click="onAccountClick('{{account.acc_id}}')">{{account.acc_name}}</a></td>
+                    <td class="text-right">{{account.count}}</td>
+                    <td class="text-right">{{account.sent_bytes}}</td>
+                    <td class="text-right">{{account.received_bytes}}</td>
+                  </tr>
+                </tbody>
+              </table>
 
             </div>
 
