general view, filter logic, services, charts updates

--- a/code/dev/index.html
+++ b/code/dev/index.html
@@ -96,6 +96,7 @@
 <script type="text/javascript" src="js/portal/shared/filter/filter.directive.js"></script>
 <script type="text/javascript" src="js/portal/shared/util/util.factory.js"></script>
 <script type="text/javascript" src="js/portal/shared/directives/ui-sref-active-if.directive.js"></script>
+<script type="text/javascript" src="js/portal/shared/filter-generator/filter-generator.constants.js"></script>
 <script type="text/javascript" src="js/portal/shared/filter-generator/filter-generator.directive.js"></script>
 <script type="text/javascript" src="js/portal/shared/filter-generator/filter-generator.service.js"></script>
 
@@ -175,7 +176,6 @@
 <script type="text/javascript" src="js/portal/reports/service/d3ChartHelper.factory.js"></script>
 <script type="text/javascript" src="js/portal/reports/service/chartColorService.factory.js"></script>
 <script type="text/javascript" src="js/portal/reports/service/pieChartHelper.factory.js"></script>
-<script type="text/javascript" src="js/portal/reports/service/reports-filter.service.js"></script>
 <script type="text/javascript" src="js/portal/reports/filter/timePeriods.directive.js"></script>
 <script type="text/javascript" src="js/portal/reports/filter/filterTopObjects.directive.js"></script>
 <script type="text/javascript" src="js/portal/reports/filter/mobileTrafficFilters.directive.js"></script>
