--- a/code/dev/parts/reports/general.html
+++ b/code/dev/parts/reports/general.html
@@ -15,8 +15,8 @@
                                     <div class="form-group">
                                         <div domain-select ng-model="vm.model.domain" on-select="vm.actions.onDomainChange()" select-one="true"></div>
                                     </div>
-                                    <div class="form-group">
-                                        <filter-generator ng-model="vm.model.filtersList"></filter-generator>
+                                    <div class="form-group" ng-if="vm.model.domain">
+                                        <filter-generator domain="vm.model.domain" ng-model="vm.model.filtersList"></filter-generator>
                                     </div>
                                 </form>
                             </div>
@@ -50,20 +50,18 @@
                             <small>Average TTFB Time For Last One Hour</small>
                         </div>
                     </div>
-                    <hr/>
                     <div class="row">
                         <div class="col-lg-6">
                             <div class="col-lg-12 nd-block">
-                                <div requests-chart fl-os="os.labels" fl-device="device.labels" fl-country="countries" ng-domain="vm.model.domain"></div>
+                                <div requests-chart ng-domain="vm.model.domain"></div>
                             </div>
                         </div>
                         <div class="col-lg-6">
                             <div class="col-lg-12 nd-block">
-                                <div proxy-traffic-chart status-codes="statusCode.labels" fl-os="os.labels" fl-device="device.labels" fl-country="countries" ng-domain="vm.model.domain"></div>
+                                <div proxy-traffic-chart status-codes="statusCode.labels" ng-domain="vm.model.domain"></div>
                             </div>
                         </div>
                     </div>
-                    <hr/>
                     <div class="row">
                         <div class="col-lg-4">
                             <div class="col-sm-12 nd-block">
@@ -99,16 +97,15 @@
                             </div>
                         </div>
                     </div>
-                    <hr/>
                     <div class="row">
                         <div class="col-md-6">
                             <div class="col-sm-12 nd-block">
-                                <div top-requests fl-os="os" fl-device="devices" fl-country="countries" ng-domain="domain"></div>
+                                <div top-requests ng-domain="vm.model.domain"></div>
                             </div>
                         </div>
                         <div class="col-md-6">
                             <div class="col-sm-12 nd-block">
-                                <div top-referer fl-os="os" fl-device="devices" fl-country="countries" ng-domain="domain"></div>
+                                <div top-referer ng-domain="vm.model.domain"></div>
                             </div>
                         </div>
                     </div>
