--- a/code/parts/reports/filters/time-period.html
+++ b/code/parts/reports/filters/time-period.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row" ng-show="flOs && flCountry && flDevice">
   <div class="col-md-12">
     <form class="form-inline">
       <div class="form-group">
