--- a/code/dev/parts/shared/filter-generator/filter-generator.html
+++ b/code/dev/parts/shared/filter-generator/filter-generator.html
@@ -37,7 +37,7 @@
 			<option
 				value=""
 				selected
-				>All {{::filter.name}}
+				>All {{::filter.allTitle}}
 			</option>
 		</select>
 		<i
