--- a/code/parts/shared/filter-generator/filter-generator.html
+++ b/code/parts/shared/filter-generator/filter-generator.html
@@ -36,7 +36,7 @@
 			<option
 				value=""
 				selected
-				>All {{::filter.name}}
+				>All {{::filter.allTitle}}
 			</option>
 		</select>
 		<i
