--- a/code/widgets/adf-widget-analytics-proxy-traffic/src/edit.html
+++ b/code/widgets/adf-widget-analytics-proxy-traffic/src/edit.html
@@ -1,23 +1,31 @@
 <form role="form">
   <div class="form-group">
     <label for="domain">domain</label>
-    <div domain-select id="domain" ng-model="config.domain" on-select="onDomainSelected()" select-one="true"></div>
+    <div domain-select id="domain" ng-model="domain" on-select="onDomainSelected()" select-one="true"></div>
+  </div>
+  <div class="form-group">
+    <label for="domain">Delay</label>
+    <select class="form-control fixed" ng-model="config.delay">
+      <option value="1">Last 1 Day</option>
+      <option value="7">Last 7 Day</option>
+      <option value="30">Last 30 Day</option>
+    </select>
   </div>
   <div class="form-group">
     <label for="country">Country</label>
-    <select id="country" class="form-control fixed" ng-options="key as item for (key, item) in flCountries" ng-model="config.filters.country">
+    <select id="country" class="form-control fixed" ng-options="key as item for (key, item) in flCountry" ng-model="config.filters.country">
       <option value="">All Countries</option>
     </select>
   </div>
   <div class="form-group">
     <label for="os">OS</label>
-    <select id="os" class="form-control fixed" ng-options="item for item in flOs" ng-model="config.filters.os">
+    <select id="os" class="form-control fixed" ng-options="item for item in flOs.labels" ng-model="config.filters.os">
       <option value="">All OS</option>
     </select>
   </div>
   <div class="form-group">
     <label for="device">Device</label>
-    <select id="device" class="form-control fixed" ng-options="item for item in flDevice" ng-model="config.filters.device" >
+    <select id="device" class="form-control fixed" ng-options="item for item in flDevice.labels" ng-model="config.filters.device">
       <option value="">All Devices</option>
     </select>
   </div>
