--- a/code/dev/index.html
+++ b/code/dev/index.html
@@ -246,9 +246,8 @@
 <script type="text/javascript" src="js/portal/keys/controller/keysEdit.controller.js"></script>
 
 <script type="text/javascript" src="js/portal/dashboard/dashboard.module.js"></script>
-<!-- <script type="text/javascript" src="js/portal/dashboard/dashboard.provider.js"></script> -->
 <script type="text/javascript" src="js/portal/dashboard/dashboard.routes.js"></script>
-
+<script type="text/javascript" src="js/portal/dashboard/services/dashboard.service.js"></script>
 <script type="text/javascript" src="js/portal/dashboard/controller/dashdoard.controller.js"></script>
 
 <script type="text/javascript" src="js/portal/app.module.js"></script>
