--- a/code/parts/profile/edit-company.html
+++ b/code/parts/profile/edit-company.html
@@ -57,7 +57,7 @@
                         Loading...
                     </div>
 
-                    <form class="form-horizontal" name="Company" ng-submit="updateCompany(model)">
+                    <form class="form-horizontal" name="Company" ng-submit="updateCompany(model)" novalidate>
 
                         <div class="form-group"
                              ng-class="{ 'has-error': Company.companyName.$invalid &&
@@ -65,7 +65,7 @@
                             <label for="companyName"
                                    class="col-sm-2 control-label"
                                    popover-trigger="mouseenter"
-                                   popover="Should be unique across the system. Will be generated from your first and last name if left empty.">
+                                   popover="Will be generated from your first and last name if left empty.">
                                 Company Name &nbsp;</label>
 
                             <div class="col-sm-10">
@@ -226,14 +226,24 @@
                         <hr>
                         <div class="form-group">
                             <div class="col-sm-offset-2 col-sm-10">
-                                <input type="submit" class="btn btn-success" ng-disabled="_loading" value="Update Company Profile">
+                                <a ui-sref="^"
+                                   ng-disabled="_loading"
+                                   class="btn btn-default">
+                                    <i class="glyphicon glyphicon-remove"></i>&nbsp;
+                                    Cancel
+                                </a>
+                                <input type="submit" class="btn btn-success"
+                                       ng-disabled="_loading || _disabled"
+                                       value="Update Company Profile">
                                 <a href="{{model.billing_portal_link.url}}"
                                 class="btn btn-primary"
                                 target="_blank"
-                                ng-disabled="_loading">
+                                ng-disabled="_loading || _disabled">
                                     <i class="glyphicon glyphicon-lock"></i>
                                     Edit Billing Profile</a>
-                                <button ng-click="deleteCompanyProfile(model.id)" class="btn btn-danger pull-right" ng-disabled="_loading">
+                                <button ng-click="deleteCompanyProfile(model.id)"
+                                        class="btn btn-danger pull-right"
+                                        ng-disabled="true || _loading || _disabled">
                                     <i class="glyphicon glyphicon-refresh spin" ng-if="_loading"></i>
                                     <i class="glyphicon glyphicon-remove" ng-if="!_loading"></i>&nbsp;
                                     Delete Company Profile
