--- a/code/parts/profile/statement.html
+++ b/code/parts/profile/statement.html
@@ -2,44 +2,57 @@
     <div class="row">
         <div class="col-sm-12">
             <h2 class="pull-left page-title">
-                Invoices & Transactions
+                Statements & Transactions
             </h2>
         </div>
     </div>
-    <div class="row" ng-init="initInvoice(params.id)">
+    <div class="row" ng-init="initStatement(params.id)">
         <div class="col-md-12">
             <div class="panel panel-default">
                 <div class="panel-heading">
                     <div class="row">
                         <div class="col-md-12">
-                            <h2>Statement {{invoice.id}}</h2>
+                            <h2>Statement {{statement.id}}</h2>
                             <button class="btn btn-info pull-right"
-                                    ng-click="savePdfStatement(invoice.id)">
+                                    ng-disabled="_loading"
+                                    ng-click="savePdfStatement(statement.id)">
                                 Get PDF</button>
+                            <a ui-sref="^.statements"
+                               ng-disabled="_loading"
+                               class="btn btn-default pull-left">
+                                <i class="glyphicon glyphicon-arrow-left"></i>&nbsp;
+                                Back To List
+                            </a>
                         </div>
                     </div>
                 </div>
-                <div class="panel-body">
+                <div class="panel-body" ng-if="_loading">
+                    <div class="alert alert-info" ng-if="_loading">
+                        <i class="glyphicon glyphicon-refresh spin" ng-if="item.loading"></i>&nbsp;
+                        Loading...
+                    </div>
+                </div>
+                <div class="panel-body" ng-if="!_loading">
                     <div class="row">
                         <div class="col-sm-6">
                             <h2>Account Information</h2>
                             <div>
-                                <div>{{invoice.customer_first_name}} {{invoice.customer_last_name}}</div>
-                                <div>{{invoice.customer_organization}}</div>
+                                <div>{{statement.customer_first_name}} {{statement.customer_last_name}}</div>
+                                <div>{{statement.customer_organization}}</div>
                                 <div id="billing_statement_customer_email">{{user.email}}</div>
-                                <div class="tel" id="billing_statement_customer_phone"><span class="value">33333333</span></div>
+                                <div class="tel" id="billing_statement_customer_phone"><span class="value">{{statement.customer_phone}}</span></div>
 
 
                                 <div class="adr">
                                     <h3>Billing Address</h3>
-                                    <div>{{invoice.customer_billing_address}}</div>
-                                    <div>{{invoice.customer_billing_address_2}}</div>
+                                    <div>{{statement.customer_billing_address}}</div>
+                                    <div>{{statement.customer_billing_address_2}}</div>
                                     <div>
-                                        <span >{{invoice.customer_billing_city}}</span>,
-                                        <abbr >{{invoice.customer_billing_state}}</abbr>
-                                        <span >{{invoice.customer_billing_zip}}</span>
+                                        <span >{{statement.customer_billing_city}}</span>,
+                                        <abbr >{{statement.customer_billing_state}}</abbr>
+                                        <span >{{statement.customer_billing_zip}}</span>
                                     </div>
-                                    <div>{{invoice.customer_billing_country}}</div>
+                                    <div>{{statement.customer_billing_country}}</div>
                                 </div>
 
                             </div>
@@ -49,38 +62,38 @@
                             <div class="billing_statement_section_content">
                                 <div id="billing_statement_summary_statement_date">
                                     <span class="billing_statement_summary_label">Statement Date:</span>
-                                    <span ><abbr title="{{invoice.created_at}}">{{invoice.created_at | date : short}}</abbr></span>
+                                    <span ><abbr title="{{statement.created_at}}">{{statement.created_at | date : short}}</abbr></span>
                                 </div>
                                 <div id="billing_statement_summary_usage_period">
                                     <span class="billing_statement_summary_label">Billing Period:</span>
                                     <span>
-                                        <abbr title="{{invoice.opened_at}}">{{invoice.opened_at | date : short}}</abbr> - <abbr title="{{invoice.settled_at}}">{{invoice.settled_at | date : short}}</abbr>
+                                        <abbr title="{{statement.opened_at}}">{{statement.opened_at | date : short}}</abbr> - <abbr title="{{statement.closed_at}}">{{statement.closed_at | date : short}}</abbr>
                                     </span>
                                 </div>
 
                                 <div id="billing_statement_summary_balance_summary">
                                     <div id="billing_statement_summary_starting_balance">
                                         <span class="billing_statement_summary_label">Starting Balance:</span>
-                                        <span>{{invoice.starting_balance_in_cents/100 | currency}}</span>
+                                        <span>{{statement.starting_balance_in_cents/100 | currency}}</span>
                                     </div>
                                     <div id="billing_statement_summary_current_charges">
                                         <span class="billing_statement_summary_label">Current Charges:</span>
-                                        <span>{{invoice.total_in_cents/100 | currency}}</span>
+                                        <span>{{statement.total_in_cents/100 | currency}}</span>
                                     </div>
                                     <div id="billing_statement_summary_current_payments_and_credits">
                                         <span class="billing_statement_summary_label">Payments:</span>
-                                        <span>$13.66</span>
+                                        <span>{{statement.payments_total/100 | currency}}</span>
                                     </div>
                                     <div id="billing_statement_summary_balance_due">
                                         <span class="billing_statement_summary_label">Ending Balance:</span>
-                                        <span>{{invoice.ending_balance_in_cents/100 | currency}}</span>
+                                        <span>{{statement.ending_balance_in_cents/100 | currency}}</span>
                                     </div>
                                 </div>
 
                                 <div id="billing_statement_summary_balance_paid">
                                     <div id="billing_statement_summary_balance_paid_date">
                                         <span class="billing_statement_summary_label">Balance Paid:</span>
-                                        <span class="pull-righ">03/09/2016 07:22PM EST</span>
+                                        <span class="pull-righ">{{statement.settled_at | date : short}}</span>
                                     </div>
                                 </div>
                             </div>
@@ -106,14 +119,14 @@
                                     </tr>
                                     </thead>
                                     <tbody>
-                                    <tr ng-repeat="transaction in invoice.transactions">
+                                    <tr ng-repeat="transaction in statement.transactions">
                                         <td><abbr title="{{transaction.created_at}}">{{transaction.created_at | date : 'MMM d, y h:mm:ss a'}}</abbr></td>
                                         <td>{{transaction.memo}}</td>
                                         <td class="billing_statement_listing_cell_money">{{transaction.amount_in_cents/100 | currency}}</td>
                                     </tr>
                                     <tr class="billing_statement_listing_tfoot">
                                         <td class="billing_statement_listing_cell_totals_label" colspan="2">Totals</td>
-                                        <td class="billing_statement_listing_cell_money">{{invoice.total_in_cents/100 | currency}}</td>
+                                        <td class="billing_statement_listing_cell_money">{{statement.total_in_cents/100 | currency}}</td>
                                     </tr>
                                     </tbody>
                                 </table>
@@ -131,7 +144,7 @@
                                     </tr>
                                     </thead>
                                     <tbody>
-                                    <tr ng-repeat="payment in invoice.payments">
+                                    <tr ng-repeat="payment in statement.payments">
                                         <td><abbr title="{{payment.created_at}}">{{payment.created_at | date : 'MMM d, y h:mm:ss a'}}</abbr></td>
                                         <td>CC Payment</td>
                                         <td>
@@ -144,7 +157,7 @@
                                     </tr>
                                     <tr class="billing_statement_listing_tfoot">
                                         <td class="billing_statement_listing_cell_totals_label" colspan="3">Totals</td>
-                                        <td class="billing_statement_listing_cell_money">{{invoice.total_in_cents/100 | currency}}</td>
+                                        <td class="billing_statement_listing_cell_money">{{statement.total_in_cents/100 | currency}}</td>
                                     </tr>
                                     </tbody>
                                 </table>
