--- a/code/parts/profile/statements.html
+++ b/code/parts/profile/statements.html
@@ -7,7 +7,7 @@
         </div>
     </div>
 
-    <div class="row" ng-init="initInvoices()">
+    <div class="row" ng-init="initStatements()">
         <div class="col-md-12">
             <div class="panel panel-default">
                 <div class="panel-heading">
@@ -29,7 +29,7 @@
                                         <!-- <div app-select ng-model="application" on-select="reloadDirs()"></div> -->
                                         <ui-select ng-model="account"
                                                    theme="select2"
-                                                   ng-disabled="_loading"
+                                                   ng-disabled=""
                                                    on-select="onAccountSelect($model)"
                                                    style="min-width: 300px;" >
                                             <ui-select-match placeholder="Select Account">{{$select.selected.acc_name}}</ui-select-match>
@@ -59,7 +59,14 @@
                         <i class="glyphicon glyphicon-refresh spin" ng-if="item.loading"></i>&nbsp;
                         Loading...
                     </div>
-                    <table datatable="ng" dt-options="dtOptions" class="table order-column table-striped" ng-if="!_loading">
+                    <div class="alert alert-danger" ng-if="!_loading && _error">
+                        {{_error.message}}
+                    </div>
+                    <table datatable="ng"
+                           dt-options="transactionsDtOptions"
+                           dt-instance="dtInstanceTransactions"
+                           class="table order-column table-striped"
+                           ng-if="!_loading && !_error">
                         <thead>
 
                         <tr>
@@ -75,9 +82,6 @@
                             <th>
                                 <p>Amount</p>
                             </th>
-                            <th>
-                                <p>Success</p>
-                            </th>
                         </tr>
                         </thead>
                         <tbody>
@@ -86,11 +90,6 @@
                                 <td>{{transaction.created_at | date : 'MMM d, y h:mm:ss a'}}</td>
                                 <td>{{transaction.memo}}</td>
                                 <td>{{transaction.amount_in_cents/100 | currency}}</td>
-                                <td>
-                                    <div>
-                                        {{transaction.success}}
-                                    </div>
-                                </td>
                             </tr>
                         </tbody>
                     </table>
@@ -109,7 +108,10 @@
                         <i class="glyphicon glyphicon-refresh spin" ng-if="item.loading"></i>&nbsp;
                         Loading...
                     </div>
-                    <table datatable="ng" dt-options="dtOptions" class="table order-column table-striped" ng-if="!_loading">
+                    <div class="alert alert-danger" ng-if="!_loading && _error">
+                        {{_error.message}}
+                    </div>
+                    <table datatable="ng" dt-options="statementsDtOptions" class="table order-column table-striped" ng-if="!_loading && !_error">
                         <thead>
 
                         <tr>
@@ -123,7 +125,7 @@
                                 <p>Memo</p>
                             </th>
                             <th>
-                                <p>Total</p>
+                                <p>Amount</p>
                             </th>
                             <th>
                                 <p>Settled At</p>
@@ -131,15 +133,12 @@
                         </tr>
                         </thead>
                         <tbody>
-                        <tr ng-repeat="invoice in invoices">
-                            <td><a ui-sref="index.accountSettings.invoice({id: invoice.id})">{{invoice.id}}</a></td>
-                            <td>{{invoice.opened_at}}</td>
-                            <td>{{invoice.memo}}</td>
-                            <td>{{invoice.total_in_cents/100 | currency}}</td>
-                            <td>{{invoice.settled_at}}</td>
-                        </tr>
-                        <tr ng-repeat="invoice in invoices">
-
+                        <tr ng-repeat="statement in statements">
+                            <td><a ui-sref="^.statement({id: statement.id})">{{statement.id}}</a></td>
+                            <td>{{statement.opened_at}}</td>
+                            <td>{{statement.memo}}</td>
+                            <td>{{statement.total_in_cents/100 | currency}}</td>
+                            <td>{{statement.settled_at}}</td>
                         </tr>
                         </tbody>
                     </table>
