--- a/code/dev/parts/profile/statement.html
+++ b/code/dev/parts/profile/statement.html
@@ -16,7 +16,7 @@
                             <button class="btn btn-info pull-right"
                                     ng-disabled="_loading"
                                     ng-click="savePdfStatement(statement.id)">
-                                Get PDF</button>
+                                Get PDF Version</button>
                             <a ui-sref="^.statements"
                                ng-disabled="_loading"
                                class="btn btn-default pull-left">
