--- a/code/parts/profile/statements.html
+++ b/code/parts/profile/statements.html
@@ -2,7 +2,7 @@
     <div class="row">
         <div class="col-sm-12">
             <h2 class="pull-left page-title">
-                Statements & Transactions
+                Billing Statements & Transactions
             </h2>
         </div>
     </div>
@@ -71,7 +71,7 @@
 
                         <tr>
                             <th>
-                                <p>Type</p>
+                                <p>Operation Type</p>
                             </th>
                             <th>
                                 <p>Date</p>
@@ -116,7 +116,7 @@
 
                         <tr>
                             <th>
-                                <p>#</p>
+                                <p>Statement #</p>
                             </th>
                             <th>
                                 <p>Date</p>
@@ -135,10 +135,10 @@
                         <tbody>
                         <tr ng-repeat="statement in statements">
                             <td><a ui-sref="^.statement({id: statement.id})">{{statement.id}}</a></td>
-                            <td>{{statement.opened_at}}</td>
+                            <td>{{statement.opened_at | date : 'MMM d, y h:mm:ss a'}}</td>
                             <td>{{statement.memo}}</td>
                             <td>{{statement.total_in_cents/100 | currency}}</td>
-                            <td>{{statement.settled_at}}</td>
+                            <td>{{statement.settled_at | date : 'MMM d, y h:mm:ss a'}}</td>
                         </tr>
                         </tbody>
                     </table>
