--- a/code/dev/parts/layout.html
+++ b/code/dev/parts/layout.html
@@ -4,6 +4,7 @@
             <img src="images/logo_color.png" alt="Logo" />
         </div>
         <div class="side-menu">
+            <dashboard-nav-menu></dashboard-nav-menu>
             <li ui-sref-active-if="{class: 'active-side-menu-item', state: 'index.apps'}">
                 <a ui-sref="index.apps.ios" class="side-menu-item">Mobile Apps</a>
                 <a ui-sref-active="active" ui-sref="index.apps.ios" class="side-menu-sub-item">iOS</a>
