--- a/code/dev/index.html
+++ b/code/dev/index.html
@@ -246,6 +246,7 @@
 <script type="text/javascript" src="js/portal/dashboard/dashboard.routes.js"></script>
 <script type="text/javascript" src="js/portal/dashboard/services/dashboard.service.js"></script>
 <script type="text/javascript" src="js/portal/dashboard/controller/dashdoard.controller.js"></script>
+<script type="text/javascript" src="js/portal/dashboard/components/dashboard-nav-menu.component.js"></script>
 
 <script type="text/javascript" src="js/portal/app.module.js"></script>
 <script type="text/javascript" src="js/portal/app.config.js"></script>
