Hide titles into report charts (use css class "reports_charts_title")

--- a/code/dev/parts/reports/charts/http-status-code.html
+++ b/code/dev/parts/reports/charts/http-status-code.html
@@ -1,4 +1,4 @@
-<h3>HTTP Status Code Hits</h3>
+<h3  class="reports_charts_title">HTTP Status Code Hits</h3>
 <div filter-time-periods
      ng-hide="!ngDomain"
      fl-os="flOs"
