--- a/code/dev/parts/reports/charts/request-status.html
+++ b/code/dev/parts/reports/charts/request-status.html
@@ -1,4 +1,4 @@
-<h3>Success/Failure Request Status</h3>
+<h3 class="reports_charts_title">Success/Failure Request Status</h3>
 <div filter-time-periods
      ng-hide="!ngDomain"
      fl-os="flOs"
