--- a/code/dev/parts/reports/charts/requests.html
+++ b/code/dev/parts/reports/charts/requests.html
@@ -1,4 +1,4 @@
-<h3>Bandwidth Usage</h3>
+<h3 class="reports_charts_title">Bandwidth Usage</h3>
 <div filter-time-periods
      ng-hide="!ngDomain"
      fl-os="flOs"
