--- a/code/dev/parts/reports/charts/hits-cache.html
+++ b/code/dev/parts/reports/charts/hits-cache.html
@@ -1,4 +1,4 @@
-<h3>Edge Cache Efficiency Hits</h3>
+<h3 class="reports_charts_title">Edge Cache Efficiency Hits</h3>
 <div filter-time-periods
      ng-hide="!ngDomain"
      fl-os="flOs"
