--- a/code/parts/reports/charts/http-status-code.html
+++ b/code/parts/reports/charts/http-status-code.html
@@ -1,4 +1,4 @@
-<h3>HTTP Status Code Hits</h3>
+<h3  class="reports_charts_title">HTTP Status Code Hits</h3>
 <div filter-time-periods
      ng-hide="!ngDomain"
      fl-os="flOs"
