--- a/code/parts/reports/charts/proxy-traffic.html
+++ b/code/parts/reports/charts/proxy-traffic.html
@@ -1,4 +1,4 @@
-<h3>Total Requests</h3>
+<h3 class="reports_charts_title">Total Requests</h3>
 <div filter-time-periods
      ng-hide="!ngDomain"
      fl-os="flOs"
