--- a/code/widgets/adf-widget-analytics-proxy-traffic/src/edit.html
+++ b/code/widgets/adf-widget-analytics-proxy-traffic/src/edit.html
@@ -1,20 +1,15 @@
 <div class="form-group">
-  <label for="domain">domain</label>
+  <label for="domain">Domain</label>
   <div domain-select id="domain" ng-model="domain" on-select="onDomainSelected()" select-one="true"></div>
 </div>
-<div class="form-group" ng-if="domain">
-  <label for="domain">Filters</label>
-  <div class="form-group">
-    <div class="row">
-      <filter-generator filters-sets="config.filters" domain="domain" ng-model="filtersList"></filter-generator>
-    </div>
-  </div>
+<div class="form-group">
+<label for="domain">Filters</label>
 </div>
-<div class="form-group" style="display:none">
-  <label for="domain">Filter</label>
+<div class="form-inline">
+
   <div class="form-group">
-    <!-- <label for="domain">Delay</label> -->
-    <select class="form-control fixed" ng-model="config.time_period">
+    <!-- <label for="domain">Time period</label> -->
+    <select class="form-control fixed" ng-model="config.time_period" ng-disable="!domain">
       <option value="1">Last 1 Day</option>
       <option value="7">Last 7 Day</option>
       <option value="30">Last 30 Day</option>
@@ -22,13 +17,13 @@
   </div>
   <div class="form-group">
     <!--  <label for="country">Country</label> -->
-    <select id="country" class="form-control fixed" ng-options="::key as ::item for (key, item) in flCountry" ng-model="config.filters.country">
+    <select id="country" class="form-control fixed" ng-options="::key as ::item for (key, item) in flCountry" ng-model="config.filters.country" ng-disable="!domain">
       <option value="">All Countries</option>
     </select>
   </div>
   <div class="form-group">
     <!-- <label for="os">OS</label> -->
-    <select id="os" class="form-control fixed" ng-options="item for item in flOs.labels" ng-model="config.filters.os">
+    <select id="os" class="form-control fixed" ng-options="item for item in flOs.labels" ng-model="config.filters.os" ng-disable="!domain">
       <option value="">All OS</option>
     </select>
   </div>
