--- a/code/widgets/adf-widget-analytics-proxy-traffic/src/widget-edit.html
+++ b/code/widgets/adf-widget-analytics-proxy-traffic/src/widget-edit.html
@@ -3,16 +3,16 @@
     <button type=button class=close ng-click=closeDialog() aria-hidden=true>&times;</button>
     <h4 class=modal-title>{{widget.title}}</h4> </div>
   <div class=modal-body>
-    <div class=\ "alert alert-danger\" role=alert ng-show=validationError> <strong>Apply error:</strong> {{validationError}} </div>
+    <div class= "alert alert-danger" role=alert ng-show=validationError> <strong>Apply error:</strong> {{validationError}} </div>
     <!--     <div class=form-group>
       <label for=widgetTitle>Title</label>
-      <input type=text class=form-control id=widgetTitle ng-model=definition.title placeholder=\ "Enter title\" required>
+      <input type=text class=form-control id=widgetTitle ng-model=definition.title placeholder= "Enter title" required>
     </div> -->
-    <div ng-if=widget.edit>
-      <adf-widget-content model=definition content=widget.edit> </adf-widget-content>
+    <div ng-if="widget.edit">
+      <adf-widget-content model=definition content="widget.edit"> </adf-widget-content>
     </div>
   </div>
   <div class=modal-footer>
-    <button type=button class=\ "btn btn-default\" ng-click=closeDialog()>Cancel</button>
-    <input type=submit class=\ "btn btn-primary\" ng-disabled=widgetEditForm.$invalid value=Apply> </div>
+    <button type=button class= "btn btn-default" ng-click=closeDialog()>Cancel</button>
+    <input type=submit class= "btn btn-primary" ng-disabled=widgetEditForm.$invalid value=Apply> </div>
 </form>
