Save new changes for dashboard

--- a/code/dev/index.html
+++ b/code/dev/index.html
@@ -263,6 +263,8 @@
 <script type="text/javascript" src="js/portal/dashboard/services/dashboard.service.js"></script>
 <script type="text/javascript" src="js/portal/dashboard/controller/dashdoard.controller.js"></script>
 <script type="text/javascript" src="js/portal/dashboard/components/dashboard-nav-menu.component.js"></script>
+<script type="text/javascript" src="js/portal/dashboard/components/dashboard-btn-new.component.js"></script>
+<script type="text/javascript" src="js/portal/dashboard/components/dashboard-btn-delete.conmponent.js"></script>
 
 <script type="text/javascript" src="js/portal/app.module.js"></script>
 <script type="text/javascript" src="js/portal/app.config.js"></script>
