--- a/code/widgets/adf-widget-analytics-proxy-traffic/src/widget-title-with-params.html
+++ b/code/widgets/adf-widget-analytics-proxy-traffic/src/widget-title-with-params.html
@@ -23,7 +23,7 @@
        </span>
 </h3>
 <span class="widget_filters_info" ng-show="!!definition.config.filters[index.key]" ng-repeat="index in [{key:'os',title:'OS'},{key:'country',title:'Сountry'},{key:'device',title:'Device'}]">
-  <span ng-if="!!definition.config.filters[index.key]"> {{index.title}}: {{definition.config.filters[index.key]}}
-     </span>
+  <small ng-if="!!definition.config.filters[index.key]"> {{index.title}}: {{definition.config.filters[index.key]}}
+     </small>
 </span>
 <span>
